--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,3 +55,30 @@ jobs:
           --repo="$GITHUB_REPOSITORY" \
           --title="$VERSION" \
           --generate-notes
+
+    - name: Generate SHA256
+      id: checksum
+      run: |
+          SHA256=$(shasum -a 256 "$ARCHIVE_NAME" | awk '{ print $1 }')
+          echo "sha256=$SHA256" >> $GITHUB_OUTPUT
+      
+    - name: Update Formula
+      env: 
+        HOMEBREW_TOKEN: ${{ secrets.HOMEBREW_TOKEN }}
+        VERSION: ${{ github.ref_name }}
+        SHA256: ${{ steps.checksum.outputs.sha256 }}
+      run: |
+          git clone https://x-access-token:$HOMEBREW_TOKEN@github.com/alewtschuk/homebrew-formulae.git
+          cd homebrew-formulae
+
+          FORMULA_FILE=Formula/rmapp.rb
+          TAG="${VERSION#v}"
+          URL="https://github.com/alewtschuk/rmapp/releases/download/${VERSION}/rmapp-${VERSION}-macos-universal.tar.gz"
+
+          sed -i '' "s|url \".*\"|url \"$URL\"|" "$FORMULA_FILE"
+          sed -i '' "s|sha256 \".*\"|sha256 \"$SHA256\"|" "$FORMULA_FILE"
+
+          git config user.name "GitHub Action"
+          git config user.email "actions@github.com"
+          git commit -am "rmapp: update to ${VERSION}"
+          git push origin main
