--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.24'
+        check-latest: true
 
     - name: Build AMD64
       env: 
